@@ -51,7 +51,7 @@ public:
             , showPlatformLayerTree(false)
             , showPaintRects(false)
             , renderVSyncEnabled(true)
-            , lowLatencyRenderingEnabled(false)
+            , renderVSyncNotificationEnabled(false)
             , perTilePaintingEnabled(false)
             , partialSwapEnabled(false)
             , acceleratedAnimationEnabled(true)
@@ -68,7 +68,7 @@ public:
         bool showPlatformLayerTree;
         bool showPaintRects;
         bool renderVSyncEnabled;
-        bool lowLatencyRenderingEnabled;
+        bool renderVSyncNotificationEnabled;
         bool perTilePaintingEnabled;
         bool partialSwapEnabled;
         bool acceleratedAnimationEnabled;
