@@ -115,7 +115,6 @@ public:
     virtual void setLayoutFallbackWidth(int);
     virtual void setLoadsImagesAutomatically(bool);
     virtual void setLocalStorageEnabled(bool);
-    virtual void setLowLatencyRenderingEnabled(bool);
     virtual void setMaxUntiledLayerSize(WebSize);
     virtual void setMediaPlaybackRequiresUserGesture(bool);
     virtual void setMemoryInfoEnabled(bool);
@@ -135,6 +134,7 @@ public:
     virtual void setPluginsEnabled(bool);
     virtual void setPrivilegedWebGLExtensionsEnabled(bool);
     virtual void setRenderVSyncEnabled(bool);
+    virtual void setRenderVSyncNotificationEnabled(bool);
     virtual void setSansSerifFontFamily(const WebString&, UScriptCode = USCRIPT_COMMON);
     virtual void setSerifFontFamily(const WebString&, UScriptCode = USCRIPT_COMMON);
     virtual void setShouldDisplayCaptions(bool);
@@ -171,7 +171,7 @@ public:
     bool showPlatformLayerTree() const { return m_showPlatformLayerTree; }
     bool showPaintRects() const { return m_showPaintRects; }
     bool renderVSyncEnabled() const { return m_renderVSyncEnabled; }
-    bool lowLatencyRenderingEnabled() const { return m_lowLatencyRenderingEnabled; }
+    bool renderVSyncNotificationEnabled() const { return m_renderVSyncNotificationEnabled; }
     bool applyDeviceScaleFactorInCompositor() const { return m_applyDeviceScaleFactorInCompositor; }
     bool applyPageScaleFactorInCompositor() const;
     bool autoZoomFocusedNodeToLegibleScale() const { return m_autoZoomFocusedNodeToLegibleScale; }
@@ -188,7 +188,7 @@ private:
     bool m_showPlatformLayerTree;
     bool m_showPaintRects;
     bool m_renderVSyncEnabled;
-    bool m_lowLatencyRenderingEnabled;
+    bool m_renderVSyncNotificationEnabled;
     bool m_viewportEnabled;
     bool m_applyDeviceScaleFactorInCompositor;
     bool m_gestureTapHighlightEnabled;
